--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -99,6 +99,10 @@ button:active {
   outline: none;
 }
 
+input {
+  color: var(--brown);
+}
+
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
