--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -119,7 +119,7 @@ button::-moz-focus-inner {
 
 ::-webkit-scrollbar {
   width: 6px;
-  background: #fff;
+  background: var(--yellow);
 }
 ::-webkit-scrollbar-thumb {
   background: var(--brown);
