--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -302,7 +302,7 @@ body {
   width: 100%;
   height: 2px;
   border-radius: 5px;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   background: rgba(237, 233, 223, 0.5);
   opacity: 1;
   transition: all 0.4s ease;
